--- a/iPortfolio/assets/css/style.css
+++ b/iPortfolio/assets/css/style.css
@@ -694,6 +694,173 @@ section {
 }
 
 /*--------------------------------------------------------------
+/*--------------------------------------------------------------
+# Certificados
+--------------------------------------------------------------*/
+.certificado .certificado-item {
+  margin-bottom: 30px;
+}
+
+.certificado #certificado-flters {
+  padding: 0;
+  margin: 0 auto 35px auto;
+  list-style: none;
+  text-align: center;
+  background: #fff;
+  border-radius: 50px;
+  padding: 2px 15px;
+}
+
+.certificado #certificado-flters li {
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px 15px 8px 15px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #272829;
+  margin-bottom: 5px;
+  transition: all 0.3s ease-in-out;
+}
+
+.certificado #certificado-flters li:hover,
+.certificado #certificado-flters li.filter-active {
+  color: #149ddd;
+}
+
+.certificado #certificado-flters li:last-child {
+  margin-right: 0;
+}
+
+.certificado .certificado-wrap {
+  transition: 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.certificado .certificado-wrap::before {
+  content: "";
+  background: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transition: all ease-in-out 0.3s;
+  z-index: 2;
+  opacity: 0;
+}
+
+.certificado .certificado-wrap .certificado-links {
+  opacity: 1;
+  left: 0;
+  right: 0;
+  bottom: -60px;
+  z-index: 3;
+  position: absolute;
+  transition: all ease-in-out 0.3s;
+  display: flex;
+  justify-content: center;
+}
+
+.certificado .certificado-wrap .certificado-links a {
+  color: #fff;
+  font-size: 28px;
+  text-align: center;
+  background: rgba(20, 157, 221, 0.75);
+  transition: 0.3s;
+  width: 50%;
+}
+
+.certificado .certificado-wrap .certificado-links a:hover {
+  background: rgba(20, 157, 221, 0.95);
+}
+
+.certificado .certificado-wrap .certificado-links a+a {
+  border-left: 1px solid #37b3ed;
+}
+
+.certificado .certificado-wrap:hover::before {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 1;
+}
+
+.certificado .certificado-wrap:hover .certificado-links {
+  opacity: 1;
+  bottom: 0;
+}
+
+/*--------------------------------------------------------------
+# certificado Details
+--------------------------------------------------------------*/
+.certificado-details {
+  padding-top: 40px;
+}
+
+.certificado-details .certificado-details-slider img {
+  width: 100%;
+}
+
+.certificado-details .certificado-details-slider .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+
+.certificado-details .certificado-details-slider .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid #149ddd;
+}
+
+.certificado-details .certificado-details-slider .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #149ddd;
+}
+
+.certificado-details .certificado-info {
+  padding: 30px;
+  box-shadow: 0px 0 30px rgba(5, 13, 24, 0.08);
+}
+
+.certificado-details .certificado-info h3 {
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #eee;
+}
+
+.certificado-details .certificado-info ul {
+  list-style: none;
+  padding: 0;
+  font-size: 15px;
+}
+
+.certificado-details .certificado-info ul li+li {
+  margin-top: 10px;
+}
+
+.certificado-details .certificado-description {
+  padding-top: 30px;
+}
+
+.certificado-details .certificado-description h2 {
+  font-size: 26px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.certificado-details .certificado-description p {
+  padding: 0;
+}
+
+/*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
 .services .icon-box {
